# serializer version: 1
# name: test_snapshot_env_all_optional_present
  '''
  export P1_ACTIVE_POWER_W=1500.0
  export P1_ACTIVE_POWER_L2_W=600.0
  export P1_ACTIVE_POWER_L3_W=400.0
  export P1_ACTIVE_VOLTAGE_L1_V=230.0
  export P1_ACTIVE_VOLTAGE_L2_V=231.0
  export P1_ACTIVE_VOLTAGE_L3_V=229.0
  export P1_ACTIVE_FREQUENCY_HZ=50.0
  export P1_TOTAL_POWER_IMPORT_KWH=10201.0
  export P1_TOTAL_POWER_EXPORT_KWH=500.0
  export P1_TOTAL_GAS_M3=7252.631
  export P1_WIFI_STRENGTH=100
  export P1_METER_MODEL='ISKRA 3PH'
  export P1_SERIAL='dev123'
  
  '''
# ---
# name: test_snapshot_env_basic
  '''
  export P1_ACTIVE_POWER_W=500.0
  export P1_ACTIVE_VOLTAGE_L1_V=239.9
  export P1_TOTAL_POWER_IMPORT_KWH=100.0
  export P1_TOTAL_POWER_EXPORT_KWH=0.0
  export P1_TOTAL_GAS_M3=7252.0
  export P1_WIFI_STRENGTH=80
  export P1_METER_MODEL='ISKRA TEST'
  export P1_SERIAL='abc123'
  
  '''
# ---
# name: test_snapshot_json_3phase
  '''
  {
    "wifi_ssid": "ThreePhase",
    "wifi_strength": 100,
    "smr_version": 50,
    "meter_model": "ISKRA 3PH",
    "unique_id": "dev123",
    "active_tariff": 2,
    "total_power_import_kwh": 10201.0,
    "total_power_import_t1_kwh": 5100.0,
    "total_power_import_t2_kwh": 5101.0,
    "total_power_import_t3_kwh": 0.0,
    "total_power_import_t4_kwh": 0.0,
    "total_power_export_kwh": 500.0,
    "total_power_export_t1_kwh": 250.0,
    "total_power_export_t2_kwh": 250.0,
    "total_power_export_t3_kwh": 0.0,
    "total_power_export_t4_kwh": 0.0,
    "active_power_w": 1500.0,
    "active_power_l1_w": 500.0,
    "active_power_l2_w": 600.0,
    "active_power_l3_w": 400.0,
    "active_voltage_l1_v": 230.0,
    "active_voltage_l2_v": 231.0,
    "active_voltage_l3_v": 229.0,
    "active_current_a": null,
    "active_current_l1_a": 2.1,
    "active_current_l2_a": 2.6,
    "active_current_l3_a": 1.7,
    "active_frequency_hz": 50.0,
    "active_power_average_w": 1480.0,
    "monthly_power_peak_w": 3200.0,
    "monthly_power_peak_timestamp": 250529120000,
    "voltage_sag_l1_count": 1,
    "voltage_sag_l2_count": 2,
    "voltage_sag_l3_count": 0,
    "voltage_swell_l1_count": 0,
    "voltage_swell_l2_count": 1,
    "voltage_swell_l3_count": 0,
    "any_power_fail_count": 3,
    "long_power_fail_count": 1,
    "total_gas_m3": 7252.631,
    "gas_timestamp": 250529120000,
    "gas_unique_id": "gas123",
    "text_message": "test message",
    "external": []
  }
  
  '''
# ---
# name: test_snapshot_json_basic
  '''
  {
    "wifi_ssid": "TestNet",
    "wifi_strength": 80,
    "smr_version": 50,
    "meter_model": "ISKRA TEST",
    "unique_id": "abc123",
    "active_tariff": 1,
    "total_power_import_kwh": 100.0,
    "total_power_import_t1_kwh": 60.0,
    "total_power_import_t2_kwh": 40.0,
    "total_power_import_t3_kwh": null,
    "total_power_import_t4_kwh": null,
    "total_power_export_kwh": 0.0,
    "total_power_export_t1_kwh": 0.0,
    "total_power_export_t2_kwh": 0.0,
    "total_power_export_t3_kwh": null,
    "total_power_export_t4_kwh": null,
    "active_power_w": 500.0,
    "active_power_l1_w": null,
    "active_power_l2_w": null,
    "active_power_l3_w": null,
    "active_voltage_l1_v": 239.9,
    "active_voltage_l2_v": null,
    "active_voltage_l3_v": null,
    "active_current_a": null,
    "active_current_l1_a": null,
    "active_current_l2_a": null,
    "active_current_l3_a": null,
    "active_frequency_hz": null,
    "active_power_average_w": null,
    "monthly_power_peak_w": null,
    "monthly_power_peak_timestamp": null,
    "voltage_sag_l1_count": null,
    "voltage_sag_l2_count": null,
    "voltage_sag_l3_count": null,
    "voltage_swell_l1_count": null,
    "voltage_swell_l2_count": null,
    "voltage_swell_l3_count": null,
    "any_power_fail_count": null,
    "long_power_fail_count": null,
    "total_gas_m3": 7252.0,
    "gas_timestamp": null,
    "gas_unique_id": "gas123",
    "text_message": null,
    "external": []
  }
  
  '''
# ---
# name: test_snapshot_json_no_gas
  '''
  {
    "wifi_ssid": "TestNet",
    "wifi_strength": 80,
    "smr_version": 50,
    "meter_model": "ISKRA TEST",
    "unique_id": "abc123",
    "active_tariff": 1,
    "total_power_import_kwh": 100.0,
    "total_power_import_t1_kwh": 60.0,
    "total_power_import_t2_kwh": 40.0,
    "total_power_import_t3_kwh": null,
    "total_power_import_t4_kwh": null,
    "total_power_export_kwh": 0.0,
    "total_power_export_t1_kwh": 0.0,
    "total_power_export_t2_kwh": 0.0,
    "total_power_export_t3_kwh": null,
    "total_power_export_t4_kwh": null,
    "active_power_w": 500.0,
    "active_power_l1_w": null,
    "active_power_l2_w": null,
    "active_power_l3_w": null,
    "active_voltage_l1_v": 239.9,
    "active_voltage_l2_v": null,
    "active_voltage_l3_v": null,
    "active_current_a": null,
    "active_current_l1_a": null,
    "active_current_l2_a": null,
    "active_current_l3_a": null,
    "active_frequency_hz": null,
    "active_power_average_w": null,
    "monthly_power_peak_w": null,
    "monthly_power_peak_timestamp": null,
    "voltage_sag_l1_count": null,
    "voltage_sag_l2_count": null,
    "voltage_sag_l3_count": null,
    "voltage_swell_l1_count": null,
    "voltage_swell_l2_count": null,
    "voltage_swell_l3_count": null,
    "any_power_fail_count": null,
    "long_power_fail_count": null,
    "total_gas_m3": null,
    "gas_timestamp": null,
    "gas_unique_id": "gas123",
    "text_message": null,
    "external": []
  }
  
  '''
# ---
# name: test_snapshot_minimal_basic
  '''
  500.0 W | 239.9 V | 100.0 kWh in | 0.0 kWh out | 7252.0 m³ gas
  
  '''
# ---
# name: test_snapshot_prometheus_3phase
  '''
  # HELP p1_active_power_w Current active power in watts
  # TYPE p1_active_power_w gauge
  p1_active_power_w 1500.0
  
  # HELP p1_total_power_import_kwh Total imported energy in kWh
  # TYPE p1_total_power_import_kwh counter
  p1_total_power_import_kwh 10201.0
  
  # HELP p1_total_power_export_kwh Total exported energy in kWh
  # TYPE p1_total_power_export_kwh counter
  p1_total_power_export_kwh 500.0
  
  # HELP p1_active_power_l2_w Phase 2 active power in watts
  # TYPE p1_active_power_l2_w gauge
  p1_active_power_l2_w 600.0
  
  # HELP p1_active_power_l3_w Phase 3 active power in watts
  # TYPE p1_active_power_l3_w gauge
  p1_active_power_l3_w 400.0
  
  # HELP p1_active_voltage_l1_v Phase 1 voltage
  # TYPE p1_active_voltage_l1_v gauge
  p1_active_voltage_l1_v 230.0
  
  # HELP p1_active_voltage_l2_v Phase 2 voltage
  # TYPE p1_active_voltage_l2_v gauge
  p1_active_voltage_l2_v 231.0
  
  # HELP p1_active_voltage_l3_v Phase 3 voltage
  # TYPE p1_active_voltage_l3_v gauge
  p1_active_voltage_l3_v 229.0
  
  # HELP p1_active_frequency_hz Line frequency in Hz
  # TYPE p1_active_frequency_hz gauge
  p1_active_frequency_hz 50.0
  
  # HELP p1_total_gas_m3 Total gas consumption in m3
  # TYPE p1_total_gas_m3 counter
  p1_total_gas_m3 7252.631
  
  
  '''
# ---
# name: test_snapshot_prometheus_basic
  '''
  # HELP p1_active_power_w Current active power in watts
  # TYPE p1_active_power_w gauge
  p1_active_power_w 500.0
  
  # HELP p1_total_power_import_kwh Total imported energy in kWh
  # TYPE p1_total_power_import_kwh counter
  p1_total_power_import_kwh 100.0
  
  # HELP p1_total_power_export_kwh Total exported energy in kWh
  # TYPE p1_total_power_export_kwh counter
  p1_total_power_export_kwh 0.0
  
  # HELP p1_active_voltage_l1_v Phase 1 voltage
  # TYPE p1_active_voltage_l1_v gauge
  p1_active_voltage_l1_v 239.9
  
  # HELP p1_total_gas_m3 Total gas consumption in m3
  # TYPE p1_total_gas_m3 counter
  p1_total_gas_m3 7252.0
  
  
  '''
# ---
# name: test_snapshot_raw_3phase
  '''
  /ISKRA 3PH
  
  1-3:0.2.8(50)
  0-0:96.1.1(dev123)
  1-0:1.8.1(5100.000*kWh)
  1-0:1.8.2(5101.000*kWh)
  1-0:1.8.3(00.000*kWh)
  1-0:1.8.4(00.000*kWh)
  1-0:2.8.1(250.000*kWh)
  1-0:2.8.2(250.000*kWh)
  1-0:2.8.3(00.000*kWh)
  1-0:2.8.4(00.000*kWh)
  0-0:96.14.0(0002)
  1-0:1.7.0(1500.000*kW)
  1-0:21.7.0(500.000*kW)
  1-0:41.7.0(600.000*kW)
  1-0:61.7.0(400.000*kW)
  1-0:32.7.0(230.0*V)
  1-0:52.7.0(231.0*V)
  1-0:72.7.0(229.0*V)
  1-0:31.7.0(2.100*A)
  1-0:51.7.0(2.600*A)
  1-0:71.7.0(1.700*A)
  1-0:14.7.0(50.000*Hz)
  1-0:32.32.0(00001)
  1-0:52.32.0(00002)
  1-0:72.32.0(00000)
  1-0:32.36.0(00000)
  1-0:52.36.0(00001)
  1-0:72.36.0(00000)
  0-0:96.7.21(00003)
  0-0:96.7.9(00001)
  0-1:24.1.0(003)
  0-1:96.1.0(gas123)
  0-1:24.2.1(0000000000W)(7252.631*m3)
  1-0:15.7.0(1480.000*kW)
  1-0:16.7.0(3200.000*kW)
  0-0:96.13.0(test message)
  !C220
  
  '''
# ---
# name: test_snapshot_raw_basic
  '''
  /ISKRA TEST
  
  1-3:0.2.8(50)
  0-0:96.1.1(abc123)
  1-0:1.8.1(60.000*kWh)
  1-0:1.8.2(40.000*kWh)
  1-0:2.8.1(00.000*kWh)
  1-0:2.8.2(00.000*kWh)
  0-0:96.14.0(0001)
  1-0:1.7.0(500.000*kW)
  1-0:32.7.0(239.9*V)
  0-1:24.1.0(003)
  0-1:96.1.0(gas123)
  0-1:24.2.1(0000000000W)(7252.000*m3)
  !DA08
  
  '''
# ---
# name: test_snapshot_raw_tariff_t2
  '''
  /ISKRA TEST
  
  1-3:0.2.8(50)
  0-0:96.1.1(abc123)
  1-0:1.8.1(60.000*kWh)
  1-0:1.8.2(40.000*kWh)
  1-0:2.8.1(00.000*kWh)
  1-0:2.8.2(00.000*kWh)
  0-0:96.14.0(0002)
  1-0:1.7.0(500.000*kW)
  1-0:32.7.0(239.9*V)
  0-1:24.1.0(003)
  0-1:96.1.0(gas123)
  0-1:24.2.1(0000000000W)(7252.000*m3)
  !1E4D
  
  '''
# ---
# name: test_snapshot_table_basic
  '''
       P1 Meter — ISKRA TEST      
  ┏━━━━━━━━━━━━━━┳━━━━━━━━━━━━━━━┓
  ┃ Field        ┃ Value         ┃
  ┡━━━━━━━━━━━━━━╇━━━━━━━━━━━━━━━┩
  │ WiFi         │ TestNet (80%) │
  │ DSMR         │ 50            │
  │ Tariff       │ Peak (T1)     │
  │ Power        │ 500.0 W       │
  │ Voltage      │ 239.9 V       │
  │ Import Total │ 100.0 kWh     │
  │ Export Total │ 0.0 kWh       │
  │ Gas          │ 7252.0 m³     │
  └──────────────┴───────────────┘
  
  '''
# ---
# name: test_snapshot_table_no_gas
  '''
       P1 Meter — ISKRA TEST      
  ┏━━━━━━━━━━━━━━┳━━━━━━━━━━━━━━━┓
  ┃ Field        ┃ Value         ┃
  ┡━━━━━━━━━━━━━━╇━━━━━━━━━━━━━━━┩
  │ WiFi         │ TestNet (80%) │
  │ DSMR         │ 50            │
  │ Tariff       │ Peak (T1)     │
  │ Power        │ 500.0 W       │
  │ Voltage      │ 239.9 V       │
  │ Import Total │ 100.0 kWh     │
  │ Export Total │ 0.0 kWh       │
  └──────────────┴───────────────┘
  
  '''
# ---
